# rc2server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  certificate.pem  key.pem  objectives.md  shell.nix
src/: main.rs
