[package]
name = "rc2server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls"] }
text_io = "0.1.9"

[global.tls]
certs = "certificate.pem"
key = "key.pem"
[development]
tls = { certs = "certificate.pem", key = "key.pem" }
